--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -1,39 +1,36 @@
-# This workflow will upload a Python Package using Twine when a release is created
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python#publishing-to-package-registries
-
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-
 name: Upload Python Package
 
 on:
-  release:
-    types: [published]
+  push:
+    branches:
+      - master  # 触发条件改为推送到 master 分支
 
 permissions:
-  contents: read
+  contents: read  # 设置必要的权限，允许读取仓库内容
 
 jobs:
   deploy:
-
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest  # 在最新的 Ubuntu 环境上运行
 
     steps:
-    - uses: actions/checkout@v4
+    - uses: actions/checkout@v4  # 检出代码
     - name: Set up Python
       uses: actions/setup-python@v3
       with:
-        python-version: '3.x'
-    - name: Install dependencies
+        python-version: '3.x'  # 设置 Python 版本
+
+    - name: Upgrade pip and install twine
       run: |
-        python -m pip install --upgrade pip
-        pip install build    
-    - name: Build package
-      run: python -m build
-    - name: Publish package
-      uses: pypa/gh-action-pypi-publish@27b31702a0e7fc50959f5ad993c78deac1bdfc29
-      with:
-        user: __token__
-        password: ${{ secrets.PYPI_API_TOKEN }}
+        python -m pip install --upgrade pip  # 升级 pip
+        pip install twine  # 安装 twine（用于上传包到 PyPI）
+
+    - name: Build package using setup.py
+      run: |
+        python setup.py  # 使用 setup.py 构建包
+
+    - name: Publish package to PyPI
+        run: |
+          twine upload dist/*  # 使用 twine 上传 dist 目录下的所有包
+        env:
+          TWINE_USERNAME: __token__  # 使用 PyPI 的 token 作为用户名
+          TWINE_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}  # 从 GitHub secrets 获取 PyPI API Token
