--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -22,6 +22,7 @@ jobs:
     - name: Upgrade pip and install twine
       run: |
         python -m pip install --upgrade pip  # 升级 pip
+        pip install setuptools
         pip install twine  # 安装 twine（用于上传包到 PyPI）
 
     - name: Build package using setup.py
