--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -4,6 +4,8 @@ on:
   push:
     branches:
       - master  # 触发条件改为推送到 master 分支
+    tags:
+      - 'v*'  # 当推送的标签以 v 开头时（例如 v1.2.3），触发工作流
 
 permissions:
   contents: read  # 设置必要的权限，允许读取仓库内容
@@ -13,25 +15,25 @@ jobs:
     runs-on: ubuntu-latest  # 在最新的 Ubuntu 环境上运行
 
     steps:
-    - uses: actions/checkout@v4  # 检出代码
-    - name: Set up Python
-      uses: actions/setup-python@v3
-      with:
-        python-version: '3.x'  # 设置 Python 版本
+      - uses: actions/checkout@v4  # 检出代码
+      - name: Set up Python
+        uses: actions/setup-python@v3
+        with:
+          python-version: '3.x'  # 设置 Python 版本
 
-    - name: Upgrade pip and install twine
-      run: |
-        python -m pip install --upgrade pip  # 升级 pip
-        pip install setuptools
-        pip install twine  # 安装 twine（用于上传包到 PyPI）
+      - name: Upgrade pip and install twine
+        run: |
+          python -m pip install --upgrade pip  # 升级 pip
+          pip install setuptools
+          pip install twine  # 安装 twine（用于上传包到 PyPI）
 
-    - name: Build package using setup.py
-      run: |
-        python setup.py  # 使用 setup.py 构建包
+      - name: Build package using setup.py
+        run: |
+          python setup.py  # 使用 setup.py 构建包
 
-    - name: Publish package to PyPI
-      run: |
-        twine upload dist/*  # 使用 twine 上传 dist 目录下的所有包
-      env:
-        TWINE_USERNAME: __token__  # 使用 PyPI 的 token 作为用户名
-        TWINE_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}  # 从 GitHub secrets 获取 PyPI API Token
+      - name: Publish package to PyPI
+        run: |
+          twine upload dist/*  # 使用 twine 上传 dist 目录下的所有包
+        env:
+          TWINE_USERNAME: __token__  # 使用 PyPI 的 token 作为用户名
+          TWINE_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}  # 从 GitHub secrets 获取 PyPI API Token
